[project]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitar Gueorguiev"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "langchain-core (>=0.3.66,<0.4.0)",
    "langchain-openai (>=0.3.24,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langserve[all] (>=0.3.1,<0.4.0)",
    "langchain-cli (>=0.0.36,<0.0.37)",
    "langsmith (>=0.4.1,<0.5.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)"
]

[tool.poetry]
packages = [{include = "langchain_tutorial", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
